5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4422/executions/1637_2711.log
== TEST (2019-04-09 11:02:12) 
-- CODE:
valor = float(input("Quanto tem? "))
ru = int(input("Quantos tickets? "))
vru = float(input("Valor do ticket: "))
passes = int(input("Quantos passes: "))
vpasses = float(input("Valor dos passes: "))

if(v >= ru * vru + passes * vpasses):
	mensagem = suficiente

else:
	mensagem = insuficiente
	
print(mensagem.upper())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if(v >= ru * vru + passes * vpasses):
NameError: name 'v' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:03:09) 
-- CODE:
valor = float(input("Quanto tem? "))
ru = int(input("Quantos tickets? "))
vru = float(input("Valor do ticket: "))
passes = int(input("Quantos passes: "))
vpasses = float(input("Valor dos passes: "))

if(valor >= ru * vru + passes * vpasses):
	mensagem = suficiente

else:
	mensagem = insuficiente
	
print(mensagem.upper())
-- EXECUTION TIME:
0.197236
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1637/2711/main.py", line 8, in <module>
    mensagem = suficiente
NameError: name 'suficiente' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:03:11) 
-- CODE:
valor = float(input("Quanto tem? "))
ru = int(input("Quantos tickets? "))
vru = float(input("Valor do ticket: "))
passes = int(input("Quantos passes: "))
vpasses = float(input("Valor dos passes: "))

if(valor >= ru * vru + passes * vpasses):
	mensagem = suficiente

else:
	mensagem = insuficiente
	
print(mensagem.upper())
-- EXECUTION TIME:
0.135639
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1637/2711/main.py", line 8, in <module>
    mensagem = suficiente
NameError: name 'suficiente' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:03:12) 
-- CODE:
valor = float(input("Quanto tem? "))
ru = int(input("Quantos tickets? "))
vru = float(input("Valor do ticket: "))
passes = int(input("Quantos passes: "))
vpasses = float(input("Valor dos passes: "))

if(valor >= ru * vru + passes * vpasses):
	mensagem = suficiente

else:
	mensagem = insuficiente
	
print(mensagem.upper())
-- EXECUTION TIME:
0.139282
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1637/2711/main.py", line 8, in <module>
    mensagem = suficiente
NameError: name 'suficiente' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:03:12) 
-- CODE:
valor = float(input("Quanto tem? "))
ru = int(input("Quantos tickets? "))
vru = float(input("Valor do ticket: "))
passes = int(input("Quantos passes: "))
vpasses = float(input("Valor dos passes: "))

if(valor >= ru * vru + passes * vpasses):
	mensagem = suficiente

else:
	mensagem = insuficiente
	
print(mensagem.upper())
-- EXECUTION TIME:
0.180886
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1637/2711/main.py", line 8, in <module>
    mensagem = suficiente
NameError: name 'suficiente' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:03:12) 
-- CODE:
valor = float(input("Quanto tem? "))
ru = int(input("Quantos tickets? "))
vru = float(input("Valor do ticket: "))
passes = int(input("Quantos passes: "))
vpasses = float(input("Valor dos passes: "))

if(valor >= ru * vru + passes * vpasses):
	mensagem = suficiente

else:
	mensagem = insuficiente
	
print(mensagem.upper())
-- EXECUTION TIME:
0.220637
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1637/2711/main.py", line 8, in <module>
    mensagem = suficiente
NameError: name 'suficiente' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:03:13) 
-- CODE:
valor = float(input("Quanto tem? "))
ru = int(input("Quantos tickets? "))
vru = float(input("Valor do ticket: "))
passes = int(input("Quantos passes: "))
vpasses = float(input("Valor dos passes: "))

if(valor >= ru * vru + passes * vpasses):
	mensagem = suficiente

else:
	mensagem = insuficiente
	
print(mensagem.upper())
-- EXECUTION TIME:
0.178067
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1637/2711/main.py", line 8, in <module>
    mensagem = suficiente
NameError: name 'suficiente' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:03:13) 
-- CODE:
valor = float(input("Quanto tem? "))
ru = int(input("Quantos tickets? "))
vru = float(input("Valor do ticket: "))
passes = int(input("Quantos passes: "))
vpasses = float(input("Valor dos passes: "))

if(valor >= ru * vru + passes * vpasses):
	mensagem = suficiente

else:
	mensagem = insuficiente
	
print(mensagem.upper())
-- EXECUTION TIME:
0.194967
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1637/2711/main.py", line 8, in <module>
    mensagem = suficiente
NameError: name 'suficiente' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:03:13) 
-- CODE:
valor = float(input("Quanto tem? "))
ru = int(input("Quantos tickets? "))
vru = float(input("Valor do ticket: "))
passes = int(input("Quantos passes: "))
vpasses = float(input("Valor dos passes: "))

if(valor >= ru * vru + passes * vpasses):
	mensagem = suficiente

else:
	mensagem = insuficiente
	
print(mensagem.upper())
-- EXECUTION TIME:
0.155884
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1637/2711/main.py", line 8, in <module>
    mensagem = suficiente
NameError: name 'suficiente' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:03:13) 
-- CODE:
valor = float(input("Quanto tem? "))
ru = int(input("Quantos tickets? "))
vru = float(input("Valor do ticket: "))
passes = int(input("Quantos passes: "))
vpasses = float(input("Valor dos passes: "))

if(valor >= ru * vru + passes * vpasses):
	mensagem = suficiente

else:
	mensagem = insuficiente
	
print(mensagem.upper())
-- EXECUTION TIME:
0.128033
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1637/2711/main.py", line 8, in <module>
    mensagem = suficiente
NameError: name 'suficiente' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:03:35) 
-- CODE:
valor = float(input("Quanto tem? "))
ru = int(input("Quantos tickets? "))
vru = float(input("Valor do ticket: "))
passes = int(input("Quantos passes: "))
vpasses = float(input("Valor dos passes: "))

if(valor >= ru * vru + passes * vpasses):
	mensagem = "suficiente"

else:
	mensagem = "insuficiente"
	
print(mensagem.upper())
-- EXECUTION TIME:
0.198271
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
INSUFICIENTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
